# startup

./: .env.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260320_0001_init.py
backend/app/: main.py  worker.py
backend/app/api/: deps.py
backend/app/api/routes/: admin.py  health.py  me.py  twa.py
backend/app/bot/: dispatcher.py
backend/app/bot/handlers/: common.py
backend/app/bot/keyboards/: common.py
backend/app/core/: config.py  constants.py  logging.py  queue.py  redis.py  security.py
backend/app/db/: seed.py  session.py
backend/app/models/: __init__.py  admin.py  analysis.py  billing.py  mixins.py  user.py
backend/app/repositories/: admin.py  analyses.py  payments.py  users.py
backend/app/schemas/: admin.py  analysis.py  payments.py  referrals.py  user.py
backend/app/services/: analysis_service.py  events.py  users.py
backend/app/services/ai/: client.py
backend/app/services/analytics/: service.py
backend/app/services/broadcasts/: service.py
backend/app/services/credits/: service.py
backend/app/templates/: report.html  system_prompt.txt  user_prompt_template.txt
backend/app/utils/: ids.py  referrals.py  summary.py
backend/app/workers/: tasks.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_admin.py  test_analysis_schema.py  test_credits.py  test_payments.py  test_referral_service.py  test_referrals.py  test_users.py
(+26 files in other folders)
